assets/scss/_styles_project.scss
/* ... */
.note,
.caution,
.warning {
  border-left-width: 4px;
  border-left-style: solid;
  position: relative;
  border-color: var(--primary-color);
  display: block;
}
.note #exclamation-icon,
.caution #exclamation-icon,
.warning #exclamation-icon {
  fill: var(--primary-color);
  position: absolute;
  top: 35%;
  left: -12px;
}

.admonition-content {
  display: block;
  margin: 0px;
  padding: 0.125em 1em;
  margin-top: 2em;
  margin-bottom: 2em;
  overflow-x: auto;
  background-color: var(--black-05);
}

.alert a {
  text-decoration: none;
}

.alert a:hover {
  text-decoration: underline;
}

.alert.alert-warning {
  border-color: red;
  background-color: rgb(249, 237, 234);
}
.alert.alert-note,
.alert.alert-info {
  border-color: #e4e4e6;
  background-color: #fbfbfc;
}
.alert.alert-caution {
  border-color: #f0b93f;
  background-color: rgb(252, 244, 225);
}
.alert.alert-tip {
  border-color: #e4e4e6;
  background-color: rgb(229, 249, 228);
}

// Overwrite default
.alert-info .alert-heading {
  color: black;
}

/* END CSS FOR NOTES, CAUTIONS, WARNINGS */

/* START CSS FOR EXPANDER */

.expand-label {
  color: #4e4f52;
  font-weight: 300;
  border: 1px solid #e4e4e6;
  border-radius: 4px;
  padding: 0.5rem 1rem 0.5rem 1rem;
  i {
    font-size: inherit !important;
  }
  display: flex;
  justify-content: space-between;
}

.expand-label span h5 {
  display: inline;
  font-family:
    Public Sans,
    system-ui;
  font-size: 0.938rem !important;
  font-weight: 300;
}

details[open] > .expand-label {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

.expand-content {
  border-top: #d9d9d9 solid 0px;
  border-left: #d9d9d9 solid 1px;
  border-right: #d9d9d9 solid 1px;
  border-bottom: #d9d9d9 solid 1px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  padding: 1rem 1rem;
  overflow: auto;
}

// First child is the anchor link
details > div.expand-content *:nth-child(2) {
  margin-top: 0rem;
}

// First child is the anchor link
details > div.expand-content > *:last-child {
  margin-bottom: 0rem;
}

.expand {
  clear: both;
  margin-bottom: 0.75rem;
  margin-top: 0.75rem;
}

.expand i {
  font-size: x-small;
  margin-right: 0.3rem;
  min-width: 16px;
}

.expand-content ol li p {
  margin-bottom: 0;
}

// Expander styling

details * i.fa-chevron-down {
  display: none;
}

details * i.fa-chevron-right {
  display: unset;
}

details * i {
  -webkit-text-stroke: 1px whitesmoke;
}

details[open] * i.fa-chevron-down {
  display: unset;
}
details[open] * i.fa-chevron-right {
  display: none;
}

details summary::-webkit-details-marker {
  display: none;
}

.center-text {
  text-align: center;
}

// Expander anchor styling START
.expander-anchor {
  display: block;
  position: relative;
  top: -130px;
  visibility: hidden;
}

.expand-link-icon {
  float: right;
  visibility: hidden;
}

.expand .expand-label:hover .expand-link-icon {
  color: blue;
  visibility: visible;
}
// Expander anchor styling END

/* END CSS FOR EXPANDER */

/* START CSS for how-to paths */

.expand.howtoexpand {
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.expand.howtoexpand summary,
.expand.howtoexpand .expand-content {
  background-color: #eaf9fb;
}

.expand.howtoexpand.light summary,
.expand.howtoexpand.light .expand-content {
  background-color: rgba(200, 249, 183, 1) !important;
}

.expand.howtoexpand.middle summary,
.expand.howtoexpand.middle .expand-content {
  background-color: rgba(189, 234, 196, 1) !important;
}

.expand.howtoexpand.dark summary,
.expand.howtoexpand.dark .expand-content {
  background-color: rgba(163, 203, 178, 1) !important;
}

.howtoexpand .expand-label {
  padding-top: 1rem;
  padding-bottom: 0;
}

.howtoexpand .expand-label > span > div {
  display: flex;
  flex-direction: column;
  align-items: baseline;
}

details.howtoexpand > div.expand-content *:nth-child(2) {
  margin-top: 0.8rem;
}

.howtoexpand .expand-label > span > div > div {
  padding-right: 14px;
  display: flex;
  flex-direction: row;
  margin-bottom: 0.5rem;
}

.howtoexpand .expand-label > span > div > div > div {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}

.howtoexpand .expand-label i {
  margin-right: 0.3rem;
  min-width: 16px;
  line-height: 1.4375em;
  margin-top: 4px;
}

.howtoexpand .expand-label h4 {
  margin-bottom: unset;
  align-content: end;
}

.howtoexpand .expand-content {
  padding-top: 0;
  padding-bottom: 0;
}

.howtoexpand .expand-content .card-container {
  margin-bottom: 1rem;
}

@media (min-width: 691px) {
  .max-page
    .howtoexpand
    > .expand-content
    > .card-container
    > div
    > .hover-card {
    max-width: 280px !important;
  }
  .search-panel__results.guides > #hits .hover-card {
    max-width: 280px !important;
  }
}

[open].howtoexpand .expand-label {
  border-bottom: unset;
}

.howtoexpand .hover-card a {
  background-color: #fff;
}

.howtoexpand #tasks {
  font-size: 0.93rem !important;
}

.howtoexpand .hover-card {
  margin: 0.8rem;
}

/* END CSS for how-to paths */

/* card styling START*/

.hover-card {
  display: flex;
  margin: 1rem;
  padding: 0;
}

.card-container {
  margin-bottom: 2rem;
}

// Hover animations and colors

.hover-card > a,
.hover-card > .hovercardcontainer {
  border: 1px solid #dee2e6;
  border-radius: 4px;
  padding: 1rem;
  margin: 0px;
  transition: all 0.2s;
  width: 100%;
}

.hover-card.link-with-icon {
  margin: 0.5rem 1rem;
}

.hover-card.link-with-icon > a,
.hover-card.link-with-ico > .hovercardcontainer {
  padding: 0.5rem 1rem;
}

.hover-card:hover > a,
.hover-card:hover > .hovercardcontainer {
  -webkit-transform: translate(-3px, -3px);
  -ms-transform: translate(-3px, -3px);
  transform: translate(-3px, -3px);
  box-shadow: 5px 5px 0 0 #dee2e6;
}

.hover-card.yellow:hover > a {
  box-shadow: 5px 5px 0 0 #ffd400;
}
.hover-card.green:hover > a {
  box-shadow: 5px 5px 0 0 #00ef83;
}
.hover-card.purple:hover > a {
  box-shadow: 5px 5px 0 0 #a51aff;
}
/* ... */

